# DetectUI

./: .gitignore  package-lock.json  pyproject.toml  test.py
detectUI/: manage.py
detectUI/accounts/: views.py
detectUI/detectUI/: asgi.py  settings.py  urls.py  wsgi.py
detectUI/detector/: forms.py  models.py  services.py  tests.py  urls.py  views.py
detectUI/detector/migrations/: 0001_initial.py  0002_detection.py  0003_detection_detections.py
detectUI/detector/services/: Vit.py  YOLO.py  base.py  registry.py
detectUI/static/css/: tailwind.css
detectUI/templates/: base.html
detectUI/templates/detector/: main.html
detectUI/templates/registration/: login.html  signup.html
