[project]
name = "detectui"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "onnxruntime (>=1.22.0,<2.0.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "ollama (>=0.5.1,<0.6.0)",
]

[tool.poetry]
packages = [{include = "detectui", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
